--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My-Todo</title>
+    <title>Money Manager</title>
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -19,5 +19,15 @@
       };
     </script>
   </head>
-  <body></body>
+  <body class="bg-gradient-to-r from-indigo-500 to-purple-500 text-white">
+    <header>
+        <h1 class="text-5xl font-semibold text-center">Money Manager</h1>
+    </header>
+    <main class="md:w-[90%] mx-auto p-2 md:p-0 backdrop-blur-lg bg-pink-500/20 rounded-xl">
+        <div>
+            <img class="rounded-xl w-4/12" src="https://images.unsplash.com/photo-1609151968443-992a5946e227?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" />
+        </div>
+        <div></div>
+    </main>
+  </body>
 </html>
